changes in add to cart and 404

--- a/src/app/components/partials/header/header.component.html
+++ b/src/app/components/partials/header/header.component.html
@@ -15,8 +15,8 @@
                     </div>
                 </li>
                 <li>
-                    <a routerLink="/cart-page">
-                        cart <span>3</span>
+                    <a routerLink="/cart-page" >
+                        cart <span *ngIf="cartQuantity">{{cartQuantity}}</span>
                     </a>
                 </li>
             </ul>
